Rewrite http module and start migrating to Exposed ORM (#28)
* Add ktor

* Update java and add jetbrains exposed dependency

* Connect to exposed on startup

* Add mapped classes

* Add DiscordAPI.kt

* Add some routes

* Update java version in pull_request.yml workflow

* Fix compile error

* Fix serialization of APIError

* Finish guilds route

* Add more routes

* Rename .java to .kt

* Porting GuildData to Exposed DiscordGuild DAO

* Add GET and PATCH guild route, rewrote http error responses, also fixed logger

* Start WebhookAppender before db

* Check for nullability in PATCH /guilds/{id}

* Use GuildInfo for GET /guilds route

* respond with guild settings on PATCH /guilds/{id}

* add avatarUrl property to DiscordUser

* Add Leaderboard routes

* Update RemoveRankedMemberRoute.kt